force-app/main/default/objects/ADM_Time_Off_Log__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox gets checked once a PTon request has been approved by the requestee&#39;s manager.</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>