force-app/main/default/objects/ADM_Time_Off_Log__c/recordTypes/CompanyHoliday.recordType-meta.xml
<RecordType>
    <fullName>CompanyHoliday</fullName>
    <active>true</active>
    <description>Use to add company holidays into the system</description>
    <label>Company Holiday</label>
</RecordType>