force-app/main/default/objects/ADM_Time_Off_Log__c/recordTypes/OutofOffice.recordType-meta.xml
<RecordType>
    <fullName>OutofOffice</fullName>
    <active>true</active>
    <description>Time out of the office away from the Scrum Team.</description>
    <label>Out of Office</label>
</RecordType>