force-app/main/default/objects/ADM_Time_Off_Log__c/recordTypes/PTOn.recordType-meta.xml
<RecordType>
    <fullName>PTOn</fullName>
    <active>true</active>
    <description>PTOn (Paid Time ON) time spent working on a project external to the Scrum Team.</description>
    <label>PTOn (Paid Time On)</label>
</RecordType>