force-app/main/default/objects/ADM_Time_Off_Log__c/validationRules/Start_Date_before_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_before_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &gt; End_Date__c</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>The start date should always be before or same day as the End date</errorMessage>
</ValidationRule>