force-app/main/default/objects/ADM_Time_Off_Log__c/listViews/All_Out_of_Office.listView-meta.xml
<ListView>
    <fullName>All_Out_of_Office</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Allocation__c</columns>
    <columns>Days__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>User__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Out of Office</label>
</ListView>