force-app/main/default/objects/ADM_Time_Off_Log__c/listViews/CompanyHolidays.listView-meta.xml
<ListView>
    <fullName>CompanyHolidays</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ADM_Time_Off_Log__c.CompanyHoliday</value>
    </filters>
    <label>Company Holidays</label>
</ListView>