force-app/main/default/objects/ADM_Time_Off_Log__c/listViews/PTOn.listView-meta.xml
<ListView>
    <fullName>PTOn</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Description__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Allocation__c</columns>
    <columns>Days__c</columns>
    <columns>Approved__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ADM_Time_Off_Log__c.PTOn</value>
    </filters>
    <label>PTOn</label>
</ListView>